--- a/Components/zia.css
+++ b/Components/zia.css
@@ -23,12 +23,11 @@ body {
   color: #3e4152;
 }
 :root {
-    --primary-color: #7c0bc2;
-    --primary-color1: #ffc759;
-    --light-primary-color: #a855f7;
-    --dark-primary-color: #4f0d75;
+    --primary-color: #45523e;
+    --light-primary-color: #8ca67e;
+    --very-light-primary-color: #e8ffdb;
   
-    --complimentary-text-color: white;
+    --complimentary-text-color: #f5ece5;
   
     --secondary-text-color: #696b79;
     --dark-secondary-text-color: #3f4049;
