Added product images

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 @import "./Components/zia.css";
-@import "./Styles/Common/common.css";
 @import "./Styles/Utility/utility.css";
+
+input {
+    outline: none;
+  }
+  .no-link-style {
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    color: inherit;
+  }
+  a {
+    color: var(--dark-secondary-text-color);
+  }
+  
