--- a/Components/Navbar/navbar.css
+++ b/Components/Navbar/navbar.css
@@ -83,10 +83,9 @@
   border-bottom: 1px solid var(--dark-secondary-text-color);
 }
 .responsive-img {
-  block-size: auto;
-  max-width: 100%;
-  width: 100%;
+  max-height: 100%;
   height: auto;
+  width: 100%;
 }
 .hero-img-wrapper{
   max-height: calc(100vh - 72px);
