--- a/Components/zia.css
+++ b/Components/zia.css
@@ -28,6 +28,7 @@ body {
     --very-light-primary-color: #e8ffdb;
   
     --complimentary-text-color: #f5ece5;
+    --transparent-white: white;
   
     --secondary-text-color: #696b79;
     --dark-secondary-text-color: #3f4049;
