--- a/Components/Products/product.css
+++ b/Components/Products/product.css
@@ -9,7 +9,7 @@
 .product-sidebar {
   overflow-y: auto;
   height: calc(100vh - 63px);
-  min-width: 13rem;
+  min-width: 16rem;
 }
 .side-navbar {
   display: flex;
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 10px 0;
 }
 .drawer-menu {
   display: flex;
@@ -27,6 +28,12 @@
 .list-item {
   padding: 0 1rem;
   margin: 0.5rem 0rem;
+}
+.slider .range{
+  position: relative;
+}
+.bttn-outline-secondary {
+  background-color: var(--transparent-white);
 }
 .product-container {
   flex-grow: 1;
