imported whislist stylesheet

--- a/Components/zia.css
+++ b/Components/zia.css
@@ -3,6 +3,7 @@
 @import "./Navbar/navbar.css";
 @import "./Login/login.css";
 @import "./Products/product.css";
+@import "./Wishlist/wishlist.css";
 
 html {
   scroll-behavior: smooth;
