Url updated in navbar

--- a/Components/Login/login.html
+++ b/Components/Login/login.html
@@ -60,14 +60,14 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link badge-container no-link-style" href="">
+                <a class="nav-icon-link badge-container no-link-style" href="../Cart/cart.html">
                   <span class="nav-icon">
                     <i class="fas fa-shopping-bag"></i>
                   </span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link no-link-style" href="">
+                <a class="nav-icon-link no-link-style" href="../Wishlist/wishlist.html">
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
