--- a/Components/Wishlist/wishlist.html
+++ b/Components/Wishlist/wishlist.html
@@ -30,14 +30,13 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <!-- <button class="sidebar-toggler" id="sidebar-toggler">Up</button> -->
             <a class="brand-logo" href="#">ZIA</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="../../index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-item-link" href="">PRODUCT</a>
+                <a class="nav-item-link" href="../Products/product.html">PRODUCT</a>
               </li>
             </ul>
           </div>
@@ -58,14 +57,14 @@
                 <a class="nav-item-link" href="../Login/login.html">LOGIN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link badge-container no-link-style" href="">
+                <a class="nav-icon-link badge-container no-link-style" href="../Cart/cart.html">
                   <span class="nav-icon">
                     <i class="fas fa-shopping-bag"></i>
                   </span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link no-link-style" href="">
+                <a class="nav-icon-link no-link-style" href="../Wishlist/wishlist.html">
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
@@ -118,8 +117,6 @@
                       <div class="card-text">Appliqued Crew-Neck T-shirt</div>
                       <div class="card-price">
                         <span class="product-discounted-price">Rs. 2364</span>
-                        <!-- <span class="product-original-price">Rs. 2999</span>
-                        <span class="product-discount">(20% OFF)</span> -->
                       </div>
                       <button class="bttn bttn-secondary">
                         <span class="bttn-icon"
