--- a/Components/Products/product.html
+++ b/Components/Products/product.html
@@ -30,7 +30,6 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <!-- <button class="sidebar-toggler" id="sidebar-toggler">Up</button> -->
             <a class="brand-logo" href="#">ZIA</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
@@ -58,14 +57,14 @@
                 <a class="nav-item-link" href="../Login/login.html">LOGIN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link badge-container no-link-style" href="">
+                <a class="nav-icon-link badge-container no-link-style" href="../Cart/cart.html">
                   <span class="nav-icon">
                     <i class="fas fa-shopping-bag"></i>
                   </span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link no-link-style" href="">
+                <a class="nav-icon-link no-link-style" href="../Wishlist/wishlist.html">
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
