--- a/Components/Cart/cart.css
+++ b/Components/Cart/cart.css
@@ -78,7 +78,7 @@
   font-size: 1rem;
 }
 .move-to-wishlist {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: var(--dark-secondary-text-color);
 }
 /* media query */
