--- a/Components/Home/home.css
+++ b/Components/Home/home.css
@@ -1,3 +1,10 @@
+.homepage-feature-header{
+
+}
+.homepage-feature-title{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
 .hero-img-wrapper {
   margin-bottom: 1rem;
 }
@@ -22,7 +29,7 @@
   border-radius: 0.75rem;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 768px) {
   .asideSection {
     grid-template-columns: repeat(1, minmax(15%, 1fr));
   }
