--- a/Components/Home/home.css
+++ b/Components/Home/home.css
@@ -14,7 +14,7 @@
 .feature-box {
   position: relative;
   padding: 0 1rem;
-  max-width: 600px;
+  max-width: 37.5rem;
   text-align: center;
 }
 .homepage-feature-img {
