name attribute added in radio input

--- a/Components/Products/product.html
+++ b/Components/Products/product.html
@@ -123,9 +123,8 @@
                                 <input
                                   class="mr-4"
                                   type="radio"
-                                  name=""
                                   id="checkbox-1"
-                                  name="checkbox-1"
+                                  name="rating"
                                   checked
                                 />
                                 4 stars & above
@@ -134,9 +133,8 @@
                                 <input
                                   class="mr-4"
                                   type="radio"
-                                  name=""
                                   id="checkbox-2"
-                                  name="checkbox-2"
+                                  name="rating"
                                 />
                                 3 stars & above
                               </label>
@@ -144,9 +142,8 @@
                                 <input
                                   class="mr-4"
                                   type="radio"
-                                  name=""
                                   id="checkbox-3"
-                                  name="checkbox-3"
+                                  name="rating"
                                 />
                                 2 stars & above
                               </label>
