Added links and dummy data

--- a/Components/Cart/cart.html
+++ b/Components/Cart/cart.html
@@ -33,7 +33,7 @@
             <rect y="20" width="60" height="10"></rect>
             <rect y="40" width="60" height="10"></rect>
           </svg>
-          <a class="brand-logo" href="#">ZIA</a>
+          <a class="brand-logo" href="#">FERN</a>
           <ul class="navbar-nav navbar-nav-collapse">
             <li class="nav-item">
               <a class="nav-item-link" href="../../index.html">HOME</a>
@@ -126,10 +126,10 @@
                 </button>
                 <div class="text-conatiner">
                   <div class="card-title">Aloe Vera</div>
-                  <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                  <div class="card-text">Indoor Plant from succulents group</div>
                   <div class="card-price">
-                    <span class="product-discounted-price">Rs. 2364</span>
-                    <span class="product-original-price">Rs. 2999</span>
+                    <span class="product-discounted-price">Rs. 550</span>
+                    <span class="product-original-price">Rs. 650</span>
                     <span class="product-discount">(20% OFF)</span>
                   </div>
                 </div>
@@ -155,10 +155,10 @@
                 </button>
                 <div class="text-conatiner">
                   <div class="card-title">Hanging Plant</div>
-                  <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                  <div class="card-text">Outdoor plant</div>
                   <div class="card-price">
-                    <span class="product-discounted-price">Rs. 2364</span>
-                    <span class="product-original-price">Rs. 2999</span>
+                    <span class="product-discounted-price">Rs. 450</span>
+                    <span class="product-original-price">Rs. 500</span>
                     <span class="product-discount">(20% OFF)</span>
                   </div>
                 </div>
