--- a/Components/Login/login.html
+++ b/Components/Login/login.html
@@ -31,7 +31,7 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <a class="brand-logo" href="#">ZIA</a>
+            <a class="brand-logo" href="#">FERN</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="../../index.html">HOME</a>
