--- a/Components/Products/product.html
+++ b/Components/Products/product.html
@@ -30,7 +30,7 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <a class="brand-logo" href="#">ZIA</a>
+            <a class="brand-logo" href="#">FERN</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="../../index.html">HOME</a>
@@ -172,7 +172,7 @@
                                   id="checkbox-2"
                                   name="checkbox-2"
                                 />
-                                Outdoor PLants
+                                Outdoor Plants
                               </label>
                               <label class="list-item" for="checkbox-3">
                                 <input
@@ -246,10 +246,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -277,10 +277,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -308,10 +308,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -339,10 +339,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -370,10 +370,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -401,10 +401,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -432,10 +432,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
@@ -463,10 +463,10 @@
                           </button>
                         </div>
                         <div class="card-content-container">
-                          <div class="card-title">Levis</div>
-                          <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                          <div class="card-title">Fiddle Leaf</div>
+                          <div class="card-text">Indoor Plant</div>
                           <div class="card-price">
-                            <span class="product-discounted-price">Rs. 2364</span>
+                            <span class="product-discounted-price">Rs. 650</span>
                             <!-- <span class="product-original-price">Rs. 2999</span>
                             <span class="product-discount">(20% OFF)</span> -->
                           </div>
