--- a/Components/SignUp/signup.html
+++ b/Components/SignUp/signup.html
@@ -31,13 +31,13 @@
                 <rect y="20" width="60" height="10"></rect>
                 <rect y="40" width="60" height="10"></rect>
               </svg>
-              <a class="brand-logo" href="#">ZIA</a>
+              <a class="brand-logo" href="#">FERN</a>
               <ul class="navbar-nav navbar-nav-collapse">
                 <li class="nav-item">
                   <a class="nav-item-link" href="../../index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-item-link" href="">PRODUCT</a>
+                  <a class="nav-item-link" href="../Products/product.html">PRODUCT</a>
                 </li>
               </ul>
             </div>
@@ -60,14 +60,14 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-icon-link badge-container no-link-style" href="">
+                  <a class="nav-icon-link badge-container no-link-style" href="../Cart/cart.html">
                     <span class="nav-icon">
                       <i class="fas fa-shopping-bag"></i>
                     </span>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-icon-link no-link-style" href="">
+                  <a class="nav-icon-link no-link-style" href="../Wishlist/wishlist.html">
                     <span class="nav-icon">
                       <i class="fas fa-heart"></i>
                     </span>
@@ -86,11 +86,20 @@
               <h3 class="login-title">Sign up</h3>
               <p class="login-subtitle text-center">Enter email and password</p>
               <div class="input-container">
-                <label class="input-label" for="userName">Email</label>
+                <label class="input-label" for="first-name">First Name</label>
                 <input
                   class="input-section"
                   type="text"
-                  id="userName"
+                  id="first-name"
+                  placeholder="First Name"
+                />
+              </div>
+              <div class="input-container">
+                <label class="input-label" for="email">Email</label>
+                <input
+                  class="input-section"
+                  type="text"
+                  id="email"
                   placeholder="Email"
                 />
               </div>
@@ -100,8 +109,17 @@
                   class="input-section"
                   type="password"
                   id="pwd"
-                  placeholder="password"
+                  placeholder="Password"
                   required
+                />
+              </div>
+              <div class="input-container">
+                <label class="input-label" for="confirm-pwd">Confirm Password</label>
+                <input
+                  class="input-section"
+                  type="password"
+                  id="confirm-pwd"
+                  placeholder="Confirm Password"
                 />
               </div>
               <label class="input-label text-sm" for="pwd-store">
