--- a/Components/Wishlist/wishlist.html
+++ b/Components/Wishlist/wishlist.html
@@ -30,7 +30,7 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <a class="brand-logo" href="#">ZIA</a>
+            <a class="brand-logo" href="#">FERN</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="../../index.html">HOME</a>
@@ -113,10 +113,10 @@
                       </button>
                     </div>
                     <div class="card-content-container">
-                      <div class="card-title">Levis</div>
-                      <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                      <div class="card-title">Fiddle Leaf</div>
+                      <div class="card-text">Indoor Plant</div>
                       <div class="card-price">
-                        <span class="product-discounted-price">Rs. 2364</span>
+                        <span class="product-discounted-price">Rs. 650</span>
                       </div>
                       <button class="bttn bttn-secondary">
                         <span class="bttn-icon"
@@ -138,10 +138,10 @@
                       </button>
                     </div>
                     <div class="card-content-container">
-                      <div class="card-title">Levis</div>
-                      <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                      <div class="card-title">Fiddle Leaf</div>
+                      <div class="card-text">Indoor Plant</div>
                       <div class="card-price">
-                        <span class="product-discounted-price">Rs. 2364</span>
+                        <span class="product-discounted-price">Rs. 650</span>
                         <!-- <span class="product-original-price">Rs. 2999</span>
                         <span class="product-discount">(20% OFF)</span> -->
                       </div>
@@ -165,10 +165,10 @@
                       </button>
                     </div>
                     <div class="card-content-container">
-                      <div class="card-title">Levis</div>
-                      <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                      <div class="card-title">Fiddle Leaf</div>
+                      <div class="card-text">Indoor Plant</div>
                       <div class="card-price">
-                        <span class="product-discounted-price">Rs. 2364</span>
+                        <span class="product-discounted-price">Rs. 650</span>
                         <!-- <span class="product-original-price">Rs. 2999</span>
                         <span class="product-discount">(20% OFF)</span> -->
                       </div>
@@ -192,10 +192,10 @@
                       </button>
                     </div>
                     <div class="card-content-container">
-                      <div class="card-title">Levis</div>
-                      <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                      <div class="card-title">Fiddle Leaf</div>
+                      <div class="card-text">Indoor Plant</div>
                       <div class="card-price">
-                        <span class="product-discounted-price">Rs. 2364</span>
+                        <span class="product-discounted-price">Rs. 650</span>
                         <!-- <span class="product-original-price">Rs. 2999</span>
                         <span class="product-discount">(20% OFF)</span> -->
                       </div>
@@ -219,10 +219,10 @@
                       </button>
                     </div>
                     <div class="card-content-container">
-                      <div class="card-title">Levis</div>
-                      <div class="card-text">Appliqued Crew-Neck T-shirt</div>
+                      <div class="card-title">Fiddle Leaf</div>
+                      <div class="card-text">Indoor Plant</div>
                       <div class="card-price">
-                        <span class="product-discounted-price">Rs. 2364</span>
+                        <span class="product-discounted-price">Rs. 650</span>
                         <!-- <span class="product-original-price">Rs. 2999</span>
                         <span class="product-discount">(20% OFF)</span> -->
                       </div>
