Added links and changes title

--- a/Components/Cart/cart.html
+++ b/Components/Cart/cart.html
@@ -59,11 +59,6 @@
           </div>
           <ul class="navbar-nav navbar-fixed">
             <li class="nav-item">
-              <a class="nav-item-link" href="../Login/login.html"
-                >LOGIN</a
-              >
-            </li>
-            <li class="nav-item">
               <a
                 class="nav-icon-link badge-container no-link-style"
                 href="#"
@@ -80,6 +75,13 @@
                 <span class="nav-icon">
                   <i class="fas fa-heart"></i>
                 </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-icon-link no-link-style"
+                href="#">
+              LOGOUT
               </a>
             </li>
           </ul>
