--- a/Components/Products/product.html
+++ b/Components/Products/product.html
@@ -30,7 +30,7 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <a class="brand-logo" href="#">FERN</a>
+            <a class="brand-logo" href="../../index.html">FERN</a>
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="../../index.html">HOME</a>
@@ -75,20 +75,20 @@
           <div class="sidebar-wrapper" id="sidebar-wrapper">
             <div class="sidebar" id="sidebar">
               <ul class="sidebar-list sidebar-collapse">
-                <li class="navbar-link-item hide">
-                  <a class="nav-item-link" href="#"><i>Profile icon</i></a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link profile-icon" href="#"><i class="fas fa-user"></i></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-item-link" href="">HOME</a>
+                <li class="sidebar-item">
+                  <a class="sidebar-item-link" href="">HOME</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-item-link" href="">PRODUCT</a>
+                <li class="sidebar-item">
+                  <a class="sidebar-item-link" href="">PRODUCT</a>
                 </li>
-                <li class="nav-item hide">
-                  <a class="nav-item-link" href="#">Orders</a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link" href="#">Orders</a>
                 </li>
-                <li class="nav-item hide">
-                  <a class="nav-item-link" href="#">Contact Us</a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link" href="#">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -482,5 +482,7 @@
             </div>
         </div> 
     </div>
+
+    <script src="../Navbar/navbar.js"></script>
 </body>
 </html>
