--- a/Components/SignUp/signup.html
+++ b/Components/SignUp/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp</title>
+    <title>Signup | Fern</title>
     <link rel="stylesheet" href="https://kube-ui.netlify.app/Components/kube-ui.css" />
     <link rel="stylesheet" href="https://kube-ui.netlify.app/utility.css">
     <link rel="stylesheet" href="../../style.css">
@@ -73,7 +73,29 @@
                     </span>
                   </a>
                 </li>
+                
               </ul>
+            </div>
+            <div class="sidebar-wrapper" id="sidebar-wrapper">
+              <div class="sidebar" id="sidebar">
+                <ul class="sidebar-list sidebar-collapse">
+                  <li class="sidebar-item hide">
+                    <a class="sidebar-item-link profile-icon" href="#"><i class="fas fa-user"></i></a>
+                  </li>
+                  <li class="sidebar-item">
+                    <a class="sidebar-item-link" href="../../index.html">Home</a>
+                  </li>
+                  <li class="sidebar-item">
+                    <a class="sidebar-item-link" href="../Products/product.html">Product</a>
+                  </li>
+                  <li class="sidebar-item hide">
+                    <a class="sidebar-item-link" href="#">Order</a>
+                  </li>
+                  <li class="sidebar-item hide">
+                    <a class="sidebar-item-link" href="#">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </nav>
         </header>
@@ -129,10 +151,10 @@
   
               <button class="bttn bttn-primary bttn-block">CREATE ACCOUNT</button>
               <p class="sub-text text-sm text-center">Already have an account? <a class="text-sm bold link-text-primary" href="../Login/login.html"> Log in!</a></p>
-  
             </form>
           </div>
         </div>
       </div>
+      <script src="../Navbar/navbar.js"></script>
 </body>
 </html>
