--- a/Components/Wishlist/wishlist.html
+++ b/Components/Wishlist/wishlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fern</title>
+    <title>Wishlist | Fern</title>
     <link rel="stylesheet" href="https://kube-ui.netlify.app/Components/kube-ui.css" />
     <link rel="stylesheet" href="https://kube-ui.netlify.app/utility.css">
     <link rel="stylesheet" href="../../style.css" />
@@ -54,9 +54,6 @@
             </div>
             <ul class="navbar-nav navbar-fixed">
               <li class="nav-item">
-                <a class="nav-item-link" href="../Login/login.html">LOGIN</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-icon-link badge-container no-link-style" href="../Cart/cart.html">
                   <span class="nav-icon">
                     <i class="fas fa-shopping-bag"></i>
@@ -68,6 +65,13 @@
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-icon-link no-link-style"
+                  href="#">
+                LOGOUT
                 </a>
               </li>
             </ul>
